examples/compute/namespaced/v1beta1/route.yaml
# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: compute.gcp.m.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: compute/v1beta1/route
  labels:
    testing.upbound.io/example-name: route
  name: route
  namespace: upbound-system
spec:
  forProvider:
    destRange: 15.0.0.0/24
    networkSelector:
      matchLabels:
        testing.upbound.io/example-name: route
    nextHopIp: 10.132.1.5
    priority: 100
